payment page created

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -1,6 +1,12 @@
 <html>
-
 <body>
-Hello world
+<form action="">
+<p>Name on card <input type="text"></input> </p>
+<p>Card Number <input type="text"></input> </p>
+<p>Zip Code <input type="text"></input></p>
+Expiration month <input type="text"></input>
+Expiration year <input type="text"></input>
+<p><input type="submit"></input></p>
+</form>
 </body>
 </html>
