index.html to availableRooms.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<form action="/reservation/availableRooms" method="GET">
+<form action="/availableRooms" method="GET">
 <p>Check-In Date: <input type="text" id="datepickerCheckIn" name="checkInDate"/></p>
 <p>Check-Out Date: <input type="text" id="datepickerCheckOut" name="checkOutDate"/></p>
 <input type="submit" value="Submit"/>
