--- a/src/main/resources/templates/availableRooms.html
+++ b/src/main/resources/templates/availableRooms.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <head>
 	<meta charset="utf-8" />
 	<title>Room Reservation</title>
@@ -13,33 +15,42 @@
 
 	$(document).ready( function () {
 		 var table = $('#roomsTable').DataTable({
-				"sAjaxSource": "/availableRooms",
+				"sAjaxSource": "/retrieveRoomTypes",
 				"sAjaxDataProp": "",
 				"order": [[ 0, "asc" ]],
 				"aoColumns": [
-				    { "mData": "id"},
-			      	{ "mData": "Style" },
-					{ "mData": "Price_per_night" }
+				    { "mData": "typeId"},
+			      	{ "mData": "style" },
+					{ "mData": "price" }
 				]
 		 })
 	});
-	
+
+
 	</script>
 </head>
 
 <body>
 	<h1>Available Rooms</h1>
 	<table id="roomsTable" class="display">
-      
-       <!-- Header Table -->
-       <thead>
-            <tr>
-                <th>Id</th>
+
+		<!-- Header Table -->
+		<thead>
+			<tr>
+				<th>Id</th>
 				<th>Room Type</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-    </table>
-    
+				<th>Price</th>
+			</tr>
+		</thead>
+		<!--  
+		<tbody>
+			<tr th:each="roomType : ${roomTypes}">
+				<td th:text="${roomType.typeId}">1</td>
+				<td><a href="#" th:text="${roomType.style}">Title ...</a></td>
+				<td th:text="${roomType.price}">Text ...</td>
+			</tr>
+		</tbody>
+		-->
+	</table>
 </body>
 </html>
