added unit test for payment controller

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -1,11 +1,11 @@
 <html>
 <body>
-<form action="">
-<p>Name on card <input type="text"></input> </p>
-<p>Card Number <input type="text"></input> </p>
-<p>Zip Code <input type="text"></input></p>
-Expiration month <input type="text"></input>
-Expiration year <input type="text"></input>
+<form action="/makePayment">
+<p>Name on card <input type="text" name="nameoncard"></input> </p>
+<p>Card Number <input type="text" name="cardnumber"></input> </p>
+<p>Zip Code <input type="text" name="zip"></input></p>
+Expiration month <input type="text" name="month"></input>
+Expiration year <input type="text" name="year"></input>
 <p><input type="submit"></input></p>
 </form>
 </body>
